adicionando media url aos padroes do urls.py
modo debug true

--- a/groovedjango/app/templates/index.html
+++ b/groovedjango/app/templates/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>GrooveDjango App</title>
-</head>
-<body>
+{% include 'header.html' %}
+	
 	<h1>Welcome to Groove Django</h1>
-</body>
-</html>
+
+{% include 'footer.html' %}
