--- a/groovedjango/app/templates/header.html
+++ b/groovedjango/app/templates/header.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf8">
 	<title>GrooveDjango App</title>
+
+	{% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-theme.min.css' %}">
+
+	<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
+<header>
+	<div class="container">
+		<h1>GrooveDjango</h1>
+	</div>
+</header>
+
+<div class="container">
