--- a/groovedjango/app/templates/artistas/listar.html
+++ b/groovedjango/app/templates/artistas/listar.html
@@ -2,4 +2,22 @@
 	
 	<h1>Artistas</h1>
 
+	{% for artista in artistas %}	
+		<div class="row">
+			<div class="col-md-4">
+				<img class="img-thumbnail" src="http://placehold.it/350x350">
+			</div>
+			<div class="col-md-8">
+				<h2>{{ artista.nome }}</h2>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+		</div>
+	{% endfor %}
+
 {% include 'footer.html' %}
