--- a/groovedjango/app/templates/index.html
+++ b/groovedjango/app/templates/index.html
@@ -1,5 +1,7 @@
 {% include 'header.html' %}
 	
-	<h1>Welcome to Groove Django</h1>
+	<div class="container">
+		<h1>Welcome to Groove Django</h1>
+	</div>
 
 {% include 'footer.html' %}
